End od section 10: Updating resources

--- a/.hintrc
+++ b/.hintrc
@@ -6,7 +6,8 @@
     "axe/forms": [
       "default",
       {
-        "select-name": "off"
+        "select-name": "off",
+        "label": "off"
       }
     ],
     "axe/structure": [
@@ -20,6 +21,7 @@
       {
         "button-name": "off"
       }
-    ]
+    ],
+    "no-inline-styles": "off"
   }
 }
