--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,16 +4,11 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
-        
         {
-            "name": "Containers: .NET Container SDK Launch",
-            "type": "docker",
-            "request": "launch",
-            "netCore": {
-                "appProject": "${workspaceFolder}/API/API.csproj",
-                "buildWithSdk": true
-            }
+            "name": ".NET Core Attach",
+            "type": "coreclr",
+            "request": "attach",
+            "processId": " 39776"
         }
     ]
 }
