--- a/Client/package.json
+++ b/Client/package.json
@@ -20,12 +20,14 @@
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
     "bootstrap": "^5.3.6",
+    "bootstrap-icons": "^1.13.1",
     "bootswatch": "^5.3.6",
     "font-awesome": "^4.7.0",
     "ng-gallery": "^12.0.0",
     "ng2-file-upload": "^8.0.0",
     "ngx-bootstrap": "^19.0.2",
     "ngx-spinner": "^19.0.0",
+    "ngx-timeago": "^3.0.0",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
