--- a/Client/package.json
+++ b/Client/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "@microsoft/signalr": "^9.0.6",
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.13.1",
     "bootswatch": "^5.3.6",
